# libraries

./: Cargo.toml  README.md
.github/: SECURITY.md
ada-allocators/: Makefile  README.md  alire.toml
ada-ansi/: Makefile  README.md  alire.toml
ada-syntax/: Makefile  README.md  alire.toml
ada-tokens/: Makefile  README.md  alire.toml
allocators/: Makefile  README.md  fpm.toml
allocators/src/: character_array.c  character_array.h  dynamic_array.c  float_array.c  float_array.h  integer_array.c  integer_array.h  lib.f90  unsigned_integer_array.c  unsigned_integer_array.h
ansi/: Makefile  README.md
ansi-codes/: Cargo.toml  README.md
c-allocators/: Makefile  README.md
c-allocators/src/: character_array.c  character_array.h  dynamic_array.c  dynamic_array.h  float_array.c  float_array.h  integer_array.c  integer_array.h  struct_array.c  struct_array.h  unsigned_integer_array.c  unsigned_integer_array.h
c-ansi/: Makefile  README.md
c-syntax/: Makefile  README.md
c-tokens/: .gitignore  Makefile  README.md
c-tokens/source/: character_token.c  character_token.h  comment_token.c  comment_token.h  delimiter_token.c  delimiter_token.h  escape_token.c  escape_token.h  number_token.c  number_token.h  operator_token.c  operator_token.h  token_type.c  token_type.h
c-tokens/src/: comment_token.c  comment_token.h  escape_token.c  escape_token.h  lexer.rs  number_token.h  operator_token.h  token_type.h
example/: node_type.rs
fortran-allocators/: Makefile  README.md
fortran-ansi/: README.md  fpm.toml
fortran-syntax/: Makefile  README.md  fpm.toml
fortran-syntax/src/: lib.f90
fortran-tokens/: Makefile  README.md  fpm.toml
fortran-tokens/src/: character_token.f90  comment_token.f90  delimiter_token.f90  escape_token.f90  lib.f90  number_token.f90  operator_token.f90  token_type.f90
libansi/: Makefile  README.md
libarray/: Makefile  README.md
libsyntax/: Makefile  README.md
libtokens/: Makefile  README.md
libtokens/src/: character_token.c  character_token.hh  comment_token.c  comment_token.hh  delimiter_token.c  delimiter_token.cc  delimiter_token.h  escape_token.c  escape_token.cc  escape_token.hh  number_token.c  number_token.hh  operator_token.c  operator_token.hh  token_type.c  token_type.cc  token_type.hh
syntax/: CHANGELOG.md  Cargo.toml  Makefile  README.md
syntax-tree/: Cargo.toml  README.md
syntax/src/: node_type.c  node_type.h  operator_token.h
tokens/: Cargo.toml  Makefile  README.md
tokens/src/: character_token.h  character_token.rs  character_tokens.rs  comment_token.c  comment_token.h  comment_token.rs  comment_tokens.rs  delimiter_token.c  delimiter_token.h  delimiter_token.rs  delimiter_tokens.rs  escape_token.c  escape_token.h  escape_token.rs  escape_tokens.rs  keyword_tokens.rs  lib.rs  number_token.c  number_token.h  number_token.rs  number_tokens.rs  operator_token.c  operator_token.rs  operator_tokens.rs  token_type.c  token_type.h  token_type.rs
