[workspace]
members = ["ansi-codes", "syntax-tree", "tokens"]
resolver = "2"

[workspace.package]
description = "Hyena Technologies Libraries"
edition = "2024"
include = [
  "Cargo.toml",
  "src/**/*"
]
license = "GNU Affero General Public License Version 3"
license-file = "LICENSE.md"
name = "libraries"
publish = false
readme = "README.md"
repository = "https://github.com/HyaenaTechnologies/libraries"
rust-version = "1.91.1"

