[package]
description = "ANSI Sequences and Codes"
edition.workspace = true
include = [
  "Cargo.toml",
  "src/**/*"
]
license-file.workspace = true
name = "ansi_codes"
publish = false
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version = "0.1.0"

[lib]
path = "src/lib.rs"

