[package]
description = "Tokens and Token Types for Tokenizers"
edition.workspace = true
include = [
  "Cargo.toml",
  "src/**/*"
]
license.workspace = true
license-file.workspace = true
name = "tokens"
publish = false
readme = "README.md"
repository = "https://github.com/HyaenaTechnologies/libraries"
rust-version.workspace = true
version = "0.1.0"

[lib]
path = "src/lib.rs"

